@@ -3,7 +3,6 @@ package com.example.backoffice.domain.vacation.converter;
 import com.example.backoffice.domain.member.entity.Members;
 import com.example.backoffice.domain.vacation.dto.VacationDateRangeDto;
 import com.example.backoffice.domain.vacation.dto.VacationsResponseDto;
-import com.example.backoffice.domain.vacation.entity.VacationPeriod;
 import com.example.backoffice.domain.vacation.entity.VacationType;
 import com.example.backoffice.domain.vacation.entity.Vacations;
 import com.example.backoffice.domain.vacation.exception.VacationsCustomException;
@@ -22,7 +21,8 @@ public class VacationsConverter {
                 .dateRange(
                         DateRange.builder()
                                 .startDate(startDate)
-                                .endDate(endDate).build()).build();
+                                .endDate(endDate.plusDays(1).minusSeconds(1))
+                                .build()).build();
     }
 
     public static VacationType toVacationType(String vacationType){
@@ -31,16 +31,6 @@ public class VacationsConverter {
             case "병가" -> VacationType.SICK_LEAVE;
             case "긴급한 휴가" -> VacationType.URGENT_LEAVE;
             default -> throw new VacationsCustomException(VacationsExceptionCode.NOT_FOUND_VACATION_TYPE);
-        };
-    }
-
-    public static Boolean toIsAccepted(String isAcceptedType){
-        return switch (isAcceptedType) {
-            case "all" -> null;
-            case "false" -> false;
-            case "true" -> true;
-            default -> throw new VacationsCustomException(
-                    VacationsExceptionCode.NOT_FOUND_VACATION_IS_ACCEPTED_TYPE);
         };
     }
 
@@ -84,31 +74,12 @@ public class VacationsConverter {
                 .onVacationMemberName(vacation.getOnVacationMember().getMemberName())
                 .vacationType(vacation.getVacationType())
                 .isAccepted(vacation.getIsAccepted())
+                .urgent(vacation.getUrgent())
                 .title(vacation.getTitle())
                 .urgentReason(vacation.getUrgentReason())
                 .startDate(vacation.getStartDate())
                 .endDate(vacation.getEndDate())
                 .build();
-    }
-
-    public static List<VacationsResponseDto.ReadDayDto> toReadDayDtoList(List<Vacations> vacationList){
-        return vacationList.stream()
-                .map(VacationsConverter::toReadDayDto)
-                .collect(Collectors.toList());
-    }
-
-    public static List<VacationsResponseDto.ReadMonthDto> toReadMonthDtoList(List<Vacations> vacationList){
-        return vacationList.stream()
-                .map(vacation ->
-                        VacationsResponseDto.ReadMonthDto.builder()
-                                .vacationId(vacation.getId())
-                                .onVacationMemberName(vacation.getOnVacationMember().getMemberName())
-                                .title(vacation.getTitle())
-                                .urgentReason(vacation.getUrgentReason())
-                                .startDate(vacation.getStartDate())
-                                .endDate(vacation.getEndDate())
-                                .build()
-                ).collect(Collectors.toList());
     }
 
     public static VacationsResponseDto.UpdateOneDto toUpdateOneDto(Vacations vacation){
@@ -122,44 +93,52 @@ public class VacationsConverter {
                 .build();
     }
 
-    public static VacationsResponseDto.UpdateOneForAdminDto toUpdateOneForAdminDto(
+    public static VacationsResponseDto.UpdateOneByAdminDto toUpdateOneByAdminDto(
             Vacations vacation){
-        return VacationsResponseDto.UpdateOneForAdminDto.builder()
+        return VacationsResponseDto.UpdateOneByAdminDto.builder()
                 .acceptedVacationMemberName(vacation.getOnVacationMember().getMemberName())
                 .vacationId(vacation.getId())
                 .isAccepted(vacation.getIsAccepted())
                 .build();
     }
 
-    public static List<VacationsResponseDto.ReadOneIsAcceptedDto> toReadOneIsAcceptedDto(
-            List<Vacations> isAcceptedVacationList){
-        return isAcceptedVacationList.stream().map(
-                vacation -> VacationsResponseDto.ReadOneIsAcceptedDto.builder()
+    public static List<VacationsResponseDto.ReadMonthDto> toReadMonthByHrManager(
+            List<Vacations> vacationList){
+        return vacationList.stream().map(
+                vacation -> VacationsResponseDto.ReadMonthDto.builder()
                         .vacationId(vacation.getId())
+                        .vacationType(vacation.getVacationType())
+                        .department(vacation.getOnVacationMember().getDepartment())
                         .onVacationMemberName(vacation.getOnVacationMember().getMemberName())
+                        .title(vacation.getTitle())
+                        .isAccepted(vacation.getIsAccepted())
+                        .urgentReason(vacation.getUrgentReason())
                         .startDate(vacation.getStartDate())
                         .endDate(vacation.getEndDate())
-                        .isAccepted(vacation.getIsAccepted())
+                        .createdAt(vacation.getCreatedAt())
+                        .modifiedAt(vacation.getModifiedAt())
                         .build()
         ).collect(Collectors.toList());
     }
 
-    public static List<VacationsResponseDto.ReadMonthDto> toReadMonthForHrManager(
+    public static List<VacationsResponseDto.ReadSummaryOneDto> toReadSummaryDtoList(
             List<Vacations> vacationList){
-        return vacationList.stream().map(
-            vacation -> VacationsResponseDto.ReadMonthDto.builder()
-                    .vacationId(vacation.getId())
-                    .vacationType(vacation.getVacationType())
-                    .department(vacation.getOnVacationMember().getDepartment())
-                    .onVacationMemberName(vacation.getOnVacationMember().getMemberName())
-                    .title(vacation.getTitle())
-                    .isAccepted(vacation.getIsAccepted())
-                    .urgentReason(vacation.getUrgentReason())
-                    .startDate(vacation.getStartDate())
-                    .endDate(vacation.getEndDate())
-                    .createdAt(vacation.getCreatedAt())
-                    .modifiedAt(vacation.getModifiedAt())
-                    .build()
-        ).collect(Collectors.toList());
+        return vacationList.stream()
+                .map(VacationsConverter::toReadSummaryOneDto)
+                .toList();
+    }
+
+    public static VacationsResponseDto.ReadSummaryOneDto toReadSummaryOneDto(
+            Vacations vacation){
+        return VacationsResponseDto.ReadSummaryOneDto.builder()
+                .vacationId(vacation.getId())
+                .startDate(vacation.getStartDate())
+                .endDate(vacation.getEndDate())
+                .vacationType(vacation.getVacationType())
+                .urgentReason(vacation.getUrgentReason())
+                .onVacationMemberName(
+                        vacation.getOnVacationMember().getMemberName())
+                .isAccepted(vacation.getIsAccepted())
+                .build();
     }
 }
